# path_resolver

./: Cargo.toml
derive_path/: Cargo.toml
derive_path/src/: lib.rs
path_trait/: Cargo.toml
path_trait/src/: lib.rs
src/: lib.rs
